Add Merger Service
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13195 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 0a159392f7faf74437c7a8b73eb43e884eeca674

--- a/art2_projects/org.kermeta.art2.merger/pom.xml
+++ b/art2_projects/org.kermeta.art2.merger/pom.xml
@@ -25,7 +25,12 @@
             <artifactId>art2.framework</artifactId>
             <version>${art2.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest</artifactId>
+            <version>1.2</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
