Ok Use New Merger instead of framework
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13204 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: d3a3805cb34626059893b16a4a92a6e3a44bbb49

--- a/art2_projects/org.kermeta.art2.ui.editor/pom.xml
+++ b/art2_projects/org.kermeta.art2.ui.editor/pom.xml
@@ -33,6 +33,11 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>art2.merger</artifactId>
+            <version>${art2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>art2.framework.bus.netty</artifactId>
             <version>${art2.version}</version>
         </dependency>
