Add Merge and Destroy directives with parser modifications
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13208 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: e788a340413f5c016ba3f004fb5ae880e5d96cd1

--- a/kompose_projects/org.kermeta.kompose.core.model.edit/plugin.properties
+++ b/kompose_projects/org.kermeta.kompose.core.model.edit/plugin.properties
@@ -84,3 +84,10 @@ _UI_Concat_value_feature = Value
 _UI_Composer_mode_feature = Mode
 _UI_Modes_INTERSECTION_literal = INTERSECTION
 _UI_Modes_UNION_literal = UNION
+_UI_Destroy_type = Destroy
+_UI_Destroy_identifier_feature = Identifier
+_UI_Destroy_value_feature = Value
+_UI_Destroy_target_feature = Target
+_UI_Merge_type = Merge
+_UI_Merge_left_feature = Left
+_UI_Merge_right_feature = Right
