--- a/kompose_projects/org.kermeta.kompose.core.parser/.project
+++ b/kompose_projects/org.kermeta.kompose.core.parser/.project
@@ -6,6 +6,11 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>org.eclipse.dltk.core.scriptbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>fr.irisa.triskell.kermeta.kpm.kpmBuilder</name>
 			<arguments>
 			</arguments>
@@ -29,5 +34,6 @@
 	<natures>
 		<nature>org.eclipse.pde.PluginNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.deved.antlride.core.nature</nature>
 	</natures>
 </projectDescription>
