Service API change bug fix Test bug fix
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13238 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: cdb325d190b445e8d8b4aaf570057fd54644c5ea

--- a/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
@@ -32,7 +32,7 @@
                         <value>art2.lib.id=${project.artifactId}</value>
                         <value>art2.lib.group=${project.groupId}</value>
                         <value>art2.lib.version=${project.version}</value>
-                        <value>art2.lib.target=${basedir}/src/main/resources/ART2-INF/art2Lib.art2</value>
+                        <value>art2.lib.target=${project.build.directory}/generated-sources/art2/ART2-INF/art2Lib.art2</value>
                         <value>tag=${maven.build.timestamp}</value>
                     </options>
                 </configuration>
