Change ART2 generation place
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13239 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 79e9d2ff499c29df57881eda7daf9d2e15fedcdf

--- a/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
@@ -18,6 +18,13 @@
     </properties>
 
     <build>
+        <resources>
+            <resource>
+                <directory>${project.build.directory}/generated-sources/art2</directory>
+            </resource>
+        </resources>
+
+
         <plugins>
             <!-- APT ART2 PLUGIN : ART2 JAVA ANNOTATION INTEGRATION -->
             <plugin>
@@ -26,7 +33,7 @@
                 <version>1.0-alpha-3</version>
                 <configuration>
                     <outputFiles>
-                        <outputFile>art2Lib.xmi</outputFile>
+                        <outputFile>${project.build.directory}/generated-sources/art2/ART2-INF/art2Lib.art2</outputFile>
                     </outputFiles>
                     <options>
                         <value>art2.lib.id=${project.artifactId}</value>
