--- a/art2_projects/org.kermeta.art2.ui.editor/pom.xml
+++ b/art2_projects/org.kermeta.art2.ui.editor/pom.xml
@@ -64,6 +64,24 @@
                     </instructions>
                 </configuration>
             </plugin>
+
+        <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>org.kermeta.art2.ui.editor.App</mainClass>
+        </configuration>
+      </plugin>
+
+
         </plugins>
     </build>
 
