--- a/art2_projects/org.kermeta.art2.platform.standalone/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.standalone/pom.xml
@@ -9,6 +9,9 @@
     <name>ART2 :: Platform :: Standalone</name>
     <url>http://maven.apache.org</url>
 
+    <properties>
+        <org.osgi.framework.system.packages.extra>sun.misc</org.osgi.framework.system.packages.extra>
+    </properties>
 
     <parent>
         <artifactId>art2.root</artifactId>
@@ -121,6 +124,14 @@
             <artifactId>art2.framework.bus.jmdns</artifactId>
             <version>${art2.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>art2.framework.bus.jgroups</artifactId>
+            <version>${art2.version}</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.main</artifactId>
@@ -186,6 +197,45 @@
                 </executions>
             </plugin>
 
+
+            <plugin>
+                <groupId>org.ops4j</groupId>
+                <artifactId>maven-pax-plugin</artifactId>
+                <version>1.4</version>
+                <configuration>
+                    <!--<framework>concierge</framework>-->
+                    <noDependencies>true</noDependencies>
+                    <provision>
+                        <param>--noConsole</param>
+                        <param>--log=DEBUG</param>
+                        <param>--workingDirectory=${project.build.directory}/paxCache_${node.name}</param>
+                    </provision>
+
+                    <deployURLs>
+                file:///${project.build.directory}/art2Bundles/scala-library-2.8.0.jar,
+                file:///${project.build.directory}/art2Bundles/slf4j-api-1.6.1.jar,
+                file:///${project.build.directory}/art2Bundles/logback-core-0.9.24.jar,
+                file:///${project.build.directory}/art2Bundles/logback-classic-0.9.24.jar,
+                file:///${project.build.directory}/art2Bundles/pax-url-assembly-1.1.3.jar,
+                file:///${project.build.directory}/art2Bundles/pax-url-mvn-1.1.3.jar,
+                file:///${project.build.directory}/art2Bundles/emf.lib-2.6.0.jar,
+                file:///${project.build.directory}/art2Bundles/org.apache.felix.shell-1.4.1.jar,
+                file:///${project.build.directory}/art2Bundles/org.apache.felix.shell.tui-1.4.1.jar,
+                file:///${project.build.directory}/art2Bundles/art2.model-${art2.version}.jar,
+                file:///${project.build.directory}/art2Bundles/art2.adaptation.model-${art2.version}.jar,
+                file:///${project.build.directory}/art2Bundles/art2.api-${art2.version}.jar,
+                file:///${project.build.directory}/art2Bundles/art2.framework-${art2.version}.jar,
+                file:///${project.build.directory}/art2Bundles/art2.framework.bus.netty-${art2.version}.jar,
+                file:///${project.build.directory}/art2Bundles/art2.kompare-${art2.version}.jar,
+                file:///${project.build.directory}/art2Bundles/art2.deploy.osgi-${art2.version}.jar,
+                file:///${project.build.directory}/art2Bundles/art2.core-${art2.version}.jar,
+                file:///${project.build.directory}/art2Bundles/art2.framework.bus.jmdns-${art2.version}.jar,
+                file:///${project.build.directory}/art2Bundles/art2.framework.bus.jgroups-${art2.version}.jar
+                    </deployURLs>
+                </configuration>
+            </plugin>
+
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -215,7 +265,6 @@
                             <key>bootstrap.version</key>
                             <value>${art2.version}</value>
                         </systemProperty>
-
 
                     </systemProperties>
                 </configuration>
