Change Push Implementation JGroups
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13333 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: b8fdebfe05b146698a529b88f0f1964834f83586

--- a/art2_projects/org.kermeta.art2.ui.editor/pom.xml
+++ b/art2_projects/org.kermeta.art2.ui.editor/pom.xml
@@ -36,14 +36,16 @@
             <artifactId>art2.merger</artifactId>
             <version>${art2.version}</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>art2.framework.bus.netty</artifactId>
             <version>${art2.version}</version>
         </dependency>
+        -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>art2.framework.bus.jmdns</artifactId>
+            <artifactId>art2.framework.bus.jgroups</artifactId>
             <version>${art2.version}</version>
         </dependency>
 
