--- a/art2_projects/org.kermeta.art2.platform.standalone/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.standalone/pom.xml
@@ -11,6 +11,8 @@
 
     <properties>
         <org.osgi.framework.system.packages.extra>sun.misc</org.osgi.framework.system.packages.extra>
+        <!--<java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>-->
+        <node.name>duke</node.name>
     </properties>
 
     <parent>
@@ -229,7 +231,7 @@
                 file:///${project.build.directory}/art2Bundles/art2.kompare-${art2.version}.jar,
                 file:///${project.build.directory}/art2Bundles/art2.deploy.osgi-${art2.version}.jar,
                 file:///${project.build.directory}/art2Bundles/art2.core-${art2.version}.jar,
-                file:///${project.build.directory}/art2Bundles/art2.framework.bus.jmdns-${art2.version}.jar,
+            <!--    file:///${project.build.directory}/art2Bundles/art2.framework.bus.jmdns-${art2.version}.jar,-->
                 file:///${project.build.directory}/art2Bundles/art2.framework.bus.jgroups-${art2.version}.jar
                     </deployURLs>
                 </configuration>
