Add JGroups to OSGI Bundle
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13358 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 1585209900712fdc0dd6d9189c1900b64688a860

--- a/art2_projects/org.kermeta.art2.platform.standalone/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.standalone/pom.xml
@@ -231,7 +231,7 @@
                 file:///${project.build.directory}/art2Bundles/art2.kompare-${art2.version}.jar,
                 file:///${project.build.directory}/art2Bundles/art2.deploy.osgi-${art2.version}.jar,
                 file:///${project.build.directory}/art2Bundles/art2.core-${art2.version}.jar,
-            <!--    file:///${project.build.directory}/art2Bundles/art2.framework.bus.jmdns-${art2.version}.jar,-->
+                file:///${project.build.directory}/art2Bundles/art2.framework.bus.jmdns-${art2.version}.jar,
                 file:///${project.build.directory}/art2Bundles/art2.framework.bus.jgroups-${art2.version}.jar
                     </deployURLs>
                 </configuration>
