--- a/componentmodel.atruntime_projects/org.kermeta.art.model.editor/plugin.properties
+++ b/componentmodel.atruntime_projects/org.kermeta.art.model.editor/plugin.properties
@@ -88,3 +88,59 @@ _UI_ImplemModelWizard_description = Create a new Implem model
 _UI_GroupModelWizard_label = Group Model
 _UI_GroupModelWizard_description = Create a new Group model
 
+_UI_DistribEditor_menu = &Distrib Editor
+_UI_DistribModelWizard_label = Distrib Model
+_UI_DistribModelWizard_description = Create a new Distrib model
+_UI_DistribEditor_label = Distrib Model Editor
+_UI_DistribEditorFilenameDefaultBase = My
+_UI_DistribEditorFilenameExtensions = distrib
+
+_UI_Smartadapters4ARTEditor_menu = &Smartadapters4ART Editor
+_UI_AdaptationsEditor_menu = &Adaptations Editor
+_UI_Art_relaxedEditor_menu = &Art_relaxed Editor
+_UI_Instance_relaxedEditor_menu = &Instance_relaxed Editor
+_UI_Type_relaxedEditor_menu = &Type_relaxed Editor
+_UI_Implem_relaxedEditor_menu = &Implem_relaxed Editor
+_UI_Group_relaxedEditor_menu = &Group_relaxed Editor
+_UI_Distrib_relaxedEditor_menu = &Distrib_relaxed Editor
+_UI_Smartadapters4ARTModelWizard_label = Smartadapters4ART Model
+_UI_Smartadapters4ARTModelWizard_description = Create a new Smartadapters4ART model
+_UI_Smartadapters4ARTEditor_label = Smartadapters4ART Model Editor
+_UI_Smartadapters4ARTEditorFilenameDefaultBase = My
+_UI_Smartadapters4ARTEditorFilenameExtensions = smartadapters4art
+_UI_AdaptationsModelWizard_label = Adaptations Model
+_UI_AdaptationsModelWizard_description = Create a new Adaptations model
+_UI_AdaptationsEditor_label = Adaptations Model Editor
+_UI_AdaptationsEditorFilenameDefaultBase = My
+_UI_AdaptationsEditorFilenameExtensions = adaptations
+_UI_Art_relaxedModelWizard_label = Art_relaxed Model
+_UI_Art_relaxedModelWizard_description = Create a new Art_relaxed model
+_UI_Art_relaxedEditor_label = Art_relaxed Model Editor
+_UI_Art_relaxedEditorFilenameDefaultBase = My
+_UI_Art_relaxedEditorFilenameExtensions = art_relaxed
+_UI_Instance_relaxedModelWizard_label = Instance_relaxed Model
+_UI_Instance_relaxedModelWizard_description = Create a new Instance_relaxed model
+_UI_Instance_relaxedEditor_label = Instance_relaxed Model Editor
+_UI_Instance_relaxedEditorFilenameDefaultBase = My
+_UI_Instance_relaxedEditorFilenameExtensions = instance_relaxed
+_UI_Type_relaxedModelWizard_label = Type_relaxed Model
+_UI_Type_relaxedModelWizard_description = Create a new Type_relaxed model
+_UI_Type_relaxedEditor_label = Type_relaxed Model Editor
+_UI_Type_relaxedEditorFilenameDefaultBase = My
+_UI_Type_relaxedEditorFilenameExtensions = type_relaxed
+_UI_Implem_relaxedModelWizard_label = Implem_relaxed Model
+_UI_Implem_relaxedModelWizard_description = Create a new Implem_relaxed model
+_UI_Implem_relaxedEditor_label = Implem_relaxed Model Editor
+_UI_Implem_relaxedEditorFilenameDefaultBase = My
+_UI_Implem_relaxedEditorFilenameExtensions = implem_relaxed
+_UI_Group_relaxedModelWizard_label = Group_relaxed Model
+_UI_Group_relaxedModelWizard_description = Create a new Group_relaxed model
+_UI_Group_relaxedEditor_label = Group_relaxed Model Editor
+_UI_Group_relaxedEditorFilenameDefaultBase = My
+_UI_Group_relaxedEditorFilenameExtensions = group_relaxed
+_UI_Distrib_relaxedModelWizard_label = Distrib_relaxed Model
+_UI_Distrib_relaxedModelWizard_description = Create a new Distrib_relaxed model
+_UI_Distrib_relaxedEditor_label = Distrib_relaxed Model Editor
+_UI_Distrib_relaxedEditorFilenameDefaultBase = My
+_UI_Distrib_relaxedEditorFilenameExtensions = distrib_relaxed
+
