git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13435 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 4959d866ba0c4cc27b21df5a3bd8fb28ef721500

--- a/componentmodel.atruntime_projects/org.kermeta.art.model/build.properties
+++ b/componentmodel.atruntime_projects/org.kermeta.art.model/build.properties
@@ -4,12 +4,11 @@
 #
 # $Id$
 
-bin.includes = model/,\
+bin.includes = .,\
+               model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties,\
-               bin/art/,\
-               .
+               plugin.properties
 jars.compile.order = .
-output.. = bin/
 source.. = src/
+output.. = bin/
