--- a/componentmodel.atruntime_projects/org.kermeta.art.model/plugin.xml
+++ b/componentmodel.atruntime_projects/org.kermeta.art.model/plugin.xml
@@ -10,7 +10,7 @@
 
 <plugin>
 
-  <extension point="org.eclipse.emf.ecore.generated_package">
+ <extension point="org.eclipse.emf.ecore.generated_package">
     <package 
        uri = "http://art" 
        class = "art.ArtPackage"
@@ -44,5 +44,61 @@
            uri="http://art/group">
     </package>
   </extension>
-  
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <package
+            uri="http://SmartAdapters4ART"
+            class="smartadapters4ART.Smartadapters4ARTPackage"
+            genModel="model/aom/art_AOM_Framework.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <package
+            uri="http://SmartAdapters4ART/adaptations"
+            class="smartadapters4ART.adaptations.AdaptationsPackage"
+            genModel="model/aom/art_AOM_Framework.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <package
+            uri="http://art_relaxed"
+            class="art_relaxed.Art_relaxedPackage"
+            genModel="model/aom/art_AOM_Framework.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <package
+            uri="http://art/instance_relaxed"
+            class="art_relaxed.instance_relaxed.Instance_relaxedPackage"
+            genModel="model/aom/art_AOM_Framework.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <package
+            uri="http://art/type_relaxed"
+            class="art_relaxed.type_relaxed.Type_relaxedPackage"
+            genModel="model/aom/art_AOM_Framework.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <package
+            uri="http://art/implem_relaxed"
+            class="art_relaxed.implem_relaxed.Implem_relaxedPackage"
+            genModel="model/aom/art_AOM_Framework.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <package
+            uri="http://art/group_relaxed"
+            class="art_relaxed.group_relaxed.Group_relaxedPackage"
+            genModel="model/aom/art_AOM_Framework.genmodel"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <package
+            uri="http://art/distrib_relaxed"
+            class="art_relaxed.distrib_relaxed.Distrib_relaxedPackage"
+            genModel="model/aom/art_AOM_Framework.genmodel"/>
+   </extension>
+
 </plugin>
