Fix Open package issues
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13469 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 7f972ebc35dd7dc81431ca51c35bd99defa061ef

--- a/art2_projects/org.kermeta.art2.ui.editor/pom.xml
+++ b/art2_projects/org.kermeta.art2.ui.editor/pom.xml
@@ -66,8 +66,8 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Import-Package>!org.kermeta.art2.ui.aspects,!org.kermeta.art2.ui,!org.kermeta.art2.ui.editor.*,!org.kermeta.art2.ui.aspects.*,org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
-                        <Private-Package>org.kermeta.art2.ui.editor.*,org.kermeta.art2.ui.aspects.*</Private-Package>
+                        <Import-Package>!org.kermeta.art2.ui.editor.*,org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
+                       <!-- <Private-Package>org.kermeta.art2.ui.editor.*,org.kermeta.art2.ui.aspects.*</Private-Package> -->
                     </instructions>
                 </configuration>
             </plugin>
