Change runner for JGroups
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13493 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: a4ca1375e95d6f78b923b22b313adcfb5b4304bb

--- a/art2_projects/org.kermeta.art2.platform.standalone/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.standalone/pom.xml
@@ -13,6 +13,8 @@
         <org.osgi.framework.system.packages.extra>sun.misc</org.osgi.framework.system.packages.extra>
         <!--<java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>-->
         <node.name>duke</node.name>
+        <bootstrap.bundles>${project.build.directory}/art2Bundles</bootstrap.bundles>
+        <bootstrap.version>${art2.version}</bootstrap.version>
     </properties>
 
     <parent>
@@ -212,7 +214,7 @@
                         <param>--log=DEBUG</param>
                         <param>--workingDirectory=${project.build.directory}/paxCache_${node.name}</param>
                     </provision>
-
+<!--
                     <deployURLs>
                 file:///${project.build.directory}/art2Bundles/scala-library-2.8.0.jar,
                 file:///${project.build.directory}/art2Bundles/slf4j-api-1.6.1.jar,
@@ -233,7 +235,7 @@
                 file:///${project.build.directory}/art2Bundles/art2.core-${art2.version}.jar,
                 file:///${project.build.directory}/art2Bundles/art2.framework.bus.jmdns-${art2.version}.jar,
                 file:///${project.build.directory}/art2Bundles/art2.framework.bus.jgroups-${art2.version}.jar
-                    </deployURLs>
+                    </deployURLs> -->
                 </configuration>
             </plugin>
 
