upadte edit according to new art2 metamodel
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13497 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 4a17f779a72198415702fac3ff4e82050c99abe9

--- a/art2_projects/org.kermeta.art2.model.edit/plugin.properties
+++ b/art2_projects/org.kermeta.art2.model.edit/plugin.properties
@@ -160,3 +160,17 @@ _UI_TypeDefinition_bean_feature = Bean
 _UI_TypeDefinition_requiredLibs_feature = Required Libs
 _UI_TypeDefinition_hashcode_feature = Hashcode
 _UI_Instance_typeDefinition_feature = Type Definition
+_UI_MetricType_type = Metric Type
+_UI_MetricValue_type = Metric Value
+_UI_InstanceMetric_type = Instance Metric
+_UI_PortMetric_type = Port Metric
+_UI_ContainerRoot_metrics_feature = Metrics
+_UI_ContainerRoot_metricTypes_feature = Metric Types
+_UI_DictionaryValue_value_feature = Value
+_UI_DeployUnit_hashcode_feature = Hashcode
+_UI_TypeDefinition_dictionaryType_feature = Dictionary Type
+_UI_Instance_dictionary_feature = Dictionary
+_UI_Metric_values_feature = Values
+_UI_Metric_nbValueMax_feature = Nb Value Max
+_UI_InstanceMetric_ref_feature = Ref
+_UI_PortMetric_ref_feature = Ref
