--- a/art2_projects/org.kermeta.art2.ui.editor/pom.xml
+++ b/art2_projects/org.kermeta.art2.ui.editor/pom.xml
@@ -67,7 +67,7 @@
                 <configuration>
                     <instructions>
                         <Import-Package>!org.kermeta.art2.ui.editor.*,org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
-                       <!-- <Private-Package>org.kermeta.art2.ui.editor.*,org.kermeta.art2.ui.aspects.*</Private-Package> -->
+                        <Private-Package>org.kermeta.art2.ui.editor.aspects.*</Private-Package>
                     </instructions>
                 </configuration>
             </plugin>
