--- a/utilities_projects/fr.irisa.triskell.network.utilities/pom.xml
+++ b/utilities_projects/fr.irisa.triskell.network.utilities/pom.xml
@@ -14,6 +14,13 @@
             <artifactId>org.osgi.core</artifactId>
             <version>1.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
