--- a/osgi_projects/fr.irisa.triskell.osgi.utilities/pom.xml
+++ b/osgi_projects/fr.irisa.triskell.osgi.utilities/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>osgi.utilities</artifactId>
     <packaging>bundle</packaging>
     <name>Triskell - OSGi Utilities</name>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <repositories>
         <repository>
             <id>fr.irisa.triskell</id>
