Adding Deployement information
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13577 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: c9617c824834d269b2643324bbfa9cb90b017eb0

--- a/utilities_projects/fr.irisa.triskell.network.utilities/pom.xml
+++ b/utilities_projects/fr.irisa.triskell.network.utilities/pom.xml
@@ -8,6 +8,10 @@
     <version>1.0.0</version>
     <packaging>bundle</packaging>
     <name>Triskell - Network Utilities</name>
+    <ciManagement>
+        <system>hudson</system>
+        <url>http://tipimouss:8091/job/fr.irisa.triskell.network.utilities/</url>
+    </ciManagement>
     <dependencies>
         <dependency>
             <groupId>org.apache.felix</groupId>
@@ -55,6 +59,20 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>tipimouss-local-maven-repository</id>
+            <name>Tipimouss Local release repository</name>
+            <url>file:/var/www/html/maven2</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+        <snapshotRepository>
+            <id>tipimouss-local-maven-repository</id>
+            <name>Tipimouss Local  snapshot repository</name>
+            <url>file:/var/www/html/maven2-snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
