git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13579 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 36995ffd9899ec822bcb88be79ab49d14c472f9c

--- a/utilities_projects/fr.irisa.triskell.cache.utilities/pom.xml
+++ b/utilities_projects/fr.irisa.triskell.cache.utilities/pom.xml
@@ -67,7 +67,7 @@
             <properties>
                 <!-- EXAMPLE FOR MYSQL -->
                 <sonar.jdbc.url>
-                   jdbc:derby://tipimouss.irisa.fr:1507/sonar;create=true
+                   jdbc:derby://localhost:1507/sonar;create=true
                 </sonar.jdbc.url>
                 <sonar.jdbc.driver>org.apache.derby.jdbc.ClientDriver</sonar.jdbc.driver>
                 <sonar.jdbc.username>sonar</sonar.jdbc.username>
