Add repository management
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13688 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: bbe93f4358661394a4348e7109b3a9fc3dafa065

--- a/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <maven.build.timestamp.format>yyyyMMddHHmmSSS</maven.build.timestamp.format>
+        <art2.repositories></art2.repositories>
     </properties>
 
     <build>
@@ -41,6 +42,7 @@
                         <value>art2.lib.version=${project.version}</value>
                         <value>art2.lib.target=${project.build.directory}/generated-sources/art2/ART2-INF/art2Lib.art2</value>
                         <value>tag=${maven.build.timestamp}</value>
+                        <value>repositories=${art2.repositories}</value>
                     </options>
                 </configuration>
                 <executions>
