--- a/art2_projects/org.kermeta.art2.core/pom.xml
+++ b/art2_projects/org.kermeta.art2.core/pom.xml
@@ -63,6 +63,14 @@
             <groupId>net.lag</groupId>
             <artifactId>configgy</artifactId>
             <version>2.8.0-1.5.5</version>
+
+            <exclusions>
+                <exclusion>
+                    <artifactId>scala-library</artifactId>
+                    <groupId>org.scala-lang</groupId>
+                </exclusion>
+            </exclusions>
+
         </dependency>
     </dependencies>
 
