--- a/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
@@ -15,7 +15,7 @@
 
     <properties>
         <maven.build.timestamp.format>yyyyMMddHHmmSSS</maven.build.timestamp.format>
-        <art2.repositories></art2.repositories>
+        <art2.repositories>http://www.kermeta.org/maven2</art2.repositories>
     </properties>
 
     <build>
