--- a/art2_projects/org.kermeta.art2.framework.baseLib/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework.baseLib/pom.xml
@@ -47,6 +47,7 @@
 
 
                 <!-- android dex phase -->
+                <!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -61,9 +62,9 @@
                         <configuration>
                             <executable>${android.tools.dx}</executable>
                             <arguments>
-                                <argument>--dex</argument>
-                                <argument>--core-library</argument>
-                                <argument>--output=${project.build.directory}/classes.dex</argument>
+                                <argument>-dex</argument>
+                                <argument>-core-library</argument>
+                                <argument>-output=${project.build.directory}/classes.dex</argument>
                                 <argument>${project.build.directory}/${project.build.finalName}.jar</argument>
                             </arguments>
                         </configuration>
@@ -85,7 +86,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
